--- a/src/app/contenido/contenido.component.html
+++ b/src/app/contenido/contenido.component.html
@@ -8,4 +8,40 @@
         
     <img class="img-cuerpo" src="../../assets/img/cuerpo.png" alt="img-cuerpo"/>
     </div>
+    <div class="cards">
+    <mat-card class="example-card">
+        <mat-card-title-group>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Large</mat-card-subtitle>
+          <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+        </mat-card-title-group>
+        <mat-card-content>
+          {{longText}}
+        </mat-card-content>
+      </mat-card>
+      <div class="card2">
+      <mat-card class="example-card" >
+        <mat-card-title-group>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Large</mat-card-subtitle>
+          <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+        </mat-card-title-group>
+        <mat-card-content>
+          {{longText}}
+        </mat-card-content>
+      </mat-card>
+    </div>
+      <mat-card class="example-card">
+        <mat-card-title-group>
+          <mat-card-title>Shiba Inu</mat-card-title>
+          <mat-card-subtitle>Large</mat-card-subtitle>
+          <img mat-card-lg-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+        </mat-card-title-group>
+        <mat-card-content>
+          {{longText}}
+        </mat-card-content>
+      </mat-card>
+      
+    </div>
+
 </div>
