--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,16 @@
 <div class="header">
-    <a href="#" class="logo" > <img class="img-logo" src="../../assets/img/logo1.png" alt="logo"
-        /></a>
-        <nav>
+    <p>
+        <mat-toolbar color="primary">
+            
+       
+
+          <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+            <mat-icon>menu</mat-icon>
+          </button>
+          <span ><img class="img-logo" src="../../assets/img/logo1.png" alt="logo"
+            /></span>
+          <span class="example-spacer"></span>
+          <nav>
             <ul>
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Nosotros</a></li>
@@ -9,4 +18,12 @@
                 <li><a href="#">Portafolio</a></li>
              </ul>
         </nav>
+          <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+            <mat-icon>favorite</mat-icon>
+          </button>
+          <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
+            <mat-icon>share</mat-icon>
+          </button>
+        </mat-toolbar>
+      </p> 
 </div>
